--- a/main.css
+++ b/main.css
@@ -26,3 +26,32 @@ h1.logo {
   margin-bottom: 38px;
   line-height: 132px;
 }
+
+nav {
+  background-color: #1c74b2;
+  text-align: center;
+}
+.menu {
+  list-style-type: none;
+  margin: 0px;
+  padding: 10px;
+  font-size: 18px;
+  min-height: 30px;
+  line-height: 200%;
+}
+.menu > li {
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-right: 1px dashed #0a2b42;
+}
+.menu > li:first-child {
+  border-left: 1px dashed #0a2b42;
+}
+.menu a {
+  color: #fff;
+  text-decoration: none;
+}
+.menu a:hover {
+  color: #0a2b42;
+}
