--- a/main.css
+++ b/main.css
@@ -55,3 +55,24 @@ nav {
 .menu a:hover {
   color: #0a2b42;
 }
+
+.subject {
+  display: inline-block;
+  width: 400px;
+}
+img {
+  max-width: 70%;
+  max-height: 70%;
+}
+.subject a {
+  opacity: 0.9;
+}
+
+.subject a:hover {
+  opacity: 1;
+}
+
+figure {
+  margin: 8px;
+  padding: 0px;
+}
