--- a/projekt/main.css
+++ b/projekt/main.css
@@ -1,240 +1,199 @@
 /* kolor tla */
-body
-{
-	margin:0;
-	background-color: rgb(207, 211, 211);
-	color:#efefef;
-	font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-	font-size:17px;
-    
+body {
+  margin: 0;
+  background-color: rgb(207, 211, 211);
+  color: #efefef;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 17px;
 }
-h1.logo
-{
-	/* font-size:44px; */
-    font-size: 7vh;
-	font-weight:900;
-	color:rgb(162, 28, 28);
-	text-align: center;
-	text-transform: uppercase;
-	margin-top:0px;
-	margin-bottom:38px;
-	line-height:20vh;
-    background-image: "img/images.jfif";
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}	
-
-h2
-{
-    color: rgb(162, 28, 28);
-    text-align: center;
+h1.logo {
+  /* font-size:44px; */
+  font-size: 7vh;
+  font-weight: 900;
+  color: rgb(162, 28, 28);
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 0px;
+  margin-bottom: 38px;
+  line-height: 20vh;
+  background-image: "img/images.jfif";
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-h3
-{
-    color: black;
+h2 {
+  color: rgb(162, 28, 28);
+  text-align: center;
 }
 
-h4
-{
-    color: black;
+h3 {
+  color: black;
 }
 
-h5
-{
-    color:rgb(61, 57, 57);
+h4 {
+  color: black;
 }
 
-#logotyp
-{
-	background-image: url("img/tlo.jpg"); 
-	height:25vh;
-    background-repeat: no-repeat;
-    background-size:cover;
-    
+h5 {
+  color: rgb(61, 57, 57);
+}
+
+#logotyp {
+  background-image: url("img/tlo.jpg");
+  height: 25vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 /* //kolor paska */
-nav
-{
-	background-color:#b11f1f;
-	text-align:center;
+nav {
+  background-color: #b11f1f;
+  text-align: center;
 }
-.menu
-{
-	list-style-type:none;
-	margin: 0px;
-	padding:10px;
-	font-size:18px;
-	min-height:30px;
-	line-height:200%;
+.menu {
+  list-style-type: none;
+  margin: 0px;
+  padding: 10px;
+  font-size: 18px;
+  min-height: 30px;
+  line-height: 200%;
 }
 
-.menu > li
-{
-	display:inline-block;
-	padding-left:20px;
-	padding-right:20px;
-	border-right: 1px dashed #bfc4c7;
+.menu > li {
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-right: 1px dashed #bfc4c7;
 }
-.menu > li:first-child
-{
-	border-left:1px dashed #bfc4c7;
+.menu > li:first-child {
+  border-left: 1px dashed #bfc4c7;
 }
-.menu a
-{
-	color:#fff;
-	text-decoration:none;
+.menu a {
+  color: #fff;
+  text-decoration: none;
 }
-.menu a:hover
-{
-	color:#0c0000;
+.menu a:hover {
+  color: #0c0000;
 }
 
-.menu_map
-{
-    list-style-type:none;
-	margin: 0px;
-	font-size:18px;
-	line-height:200%;
-    height: 5vh;
+.menu_map {
+  list-style-type: none;
+  margin: 0px;
+  font-size: 18px;
+  line-height: 200%;
+  height: 5vh;
 }
-.menu_map > li
-{
-	display:inline-block;
-	padding-left:20px;
-	padding-right:20px;
-	border-right: 1px dashed #0a2b42;
+.menu_map > li {
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-right: 1px dashed #0a2b42;
 }
-.menu_map > li:first-child
-{
-	border-left:1px dashed #0a2b42;
+.menu_map > li:first-child {
+  border-left: 1px dashed #0a2b42;
 }
-.menu_map a
-{
-	color:#fff;
-	text-decoration:none;
+.menu_map a {
+  color: #fff;
+  text-decoration: none;
 }
-.menu_map a:hover
-{
-	color:#b30909;
+.menu_map a:hover {
+  color: #b30909;
 }
 
-
-.subject
-{
-    display:inline-block;
-    width: auto;
-	height: auto;
-    
+.subject {
+  display: inline-block;
+  width: auto;
+  height: auto;
 }
 
-.obiekty_wektorowe
-{
-    display:inline-block;
-    width: 40vh;
-	height: 40vh;
-    
+.obiekty_wektorowe {
+  display: inline-block;
+  width: 40vh;
+  height: 40vh;
 }
 
-.motyw
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    /* margin-left: 35vw;
+.motyw {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  /* margin-left: 35vw;
     max-width: 30vw; */
-    /* background-color: pink; */
+  /* background-color: pink; */
 }
 img {
-    max-width: 100%;
-    max-height: 100%;
-	height: 35vh ;
-	
-	
+  max-width: 100%;
+  max-height: 100%;
+  height: 35vh;
 }
-.subject a
-{
-	opacity:0.9;
+.subject a {
+  opacity: 0.9;
 }
 
-.subject a:hover
-{
-	opacity:1;
+.subject a:hover {
+  opacity: 1;
 }
 
-.geop
-{
-    text-align: center;
-    /* background-color: blueviolet; */
-   
+.geop {
+  text-align: center;
+  /* background-color: blueviolet; */
 }
 
-.przejscie
-{
-    background-image: url("img/pkin.jfif");
-    background-repeat: no-repeat;
-    background-size:cover;
-    border-radius: 5px;
-    border-color: black;
-    /* height: 10vh; */
-    /* width: 10vw; */
-    /* background-color: blueviolet; */
-
+.przejscie {
+  background-image: url("img/pkin.jfif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 5px;
+  border-color: black;
+  /* height: 10vh; */
+  /* width: 10vw; */
+  /* background-color: blueviolet; */
 }
 
-.przycisk
-{
-    height: 30vh;
-    width: 30vw;
-    background-image: url("img/odnosnik.jpg");
-    background-repeat: no-repeat;
-    background-size:cover;
-    font-size: 5vh;
-    color: #0c0b0b;
-    border-radius: 10px;
-    
+.przycisk {
+  height: 30vh;
+  width: 30vw;
+  background-image: url("img/odnosnik.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 5vh;
+  color: #0c0b0b;
+  border-radius: 10px;
 }
 
-figure
-{
-	margin:8px;
-	padding:0px;
+figure {
+  margin: 8px;
+  padding: 0px;
 }
 
 #map {
-    height: 95vh;
-    width: auto;
-   
+  height: 95vh;
+  width: auto;
 }
 
-header 
-{
-text-align: center;
+header {
+  text-align: center;
 }
 
-article
-{
-    margin-top: 2vh;
-    margin-left: 10vw;
-    margin-right: 10vw;
-    color: black;
+article {
+  margin-top: 2vh;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  color: black;
 }
 
 a {
-    text-decoration: none;
-    color: black;
- }
+  text-decoration: none;
+  color: black;
+}
 
- a:hover {
-    text-decoration: underline;
- }
+a:hover {
+  text-decoration: underline;
+}
 
-#mapka
-{
-border-radius: 15px;
-border-color: black;
-height: 30vh;
-width: 30vw;
-margin-left: 35vw;
-margin-right: 35vw;
+#mapka {
+  border-radius: 15px;
+  border-color: black;
+  height: 30vh;
+  width: 30vw;
+  margin-left: 35vw;
+  margin-right: 35vw;
 }
